# AudioUpload

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 47bba2649ee8_add_roles.py
audioupload/: main.py
audioupload/core/: clients.py  security.py
audioupload/database/: db_init.py  redis_init.py
audioupload/models/: __all_models.py  audiofile.py  role.py  user.py
audioupload/repository/: audiofile.py  base.py  role.py  user.py
audioupload/routes/: auth.py  upload.py  user.py  users.py
audioupload/schemas/: audiofile.py  role.py  user.py
