[project]
name = "audioupload"
version = "0.1.0"
description = ""
authors = [
    {name = "viamn",email = "helifur17@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "yandexid (>=0.3.1,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "asyncio-redis (>=0.16.0,<0.17.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
